# playwright-mcp-tools

./: .env.example  .gitignore  README.md  mcp_dailydose.py  mcp_kleinanzeigen.py  mcp_server.py  pyproject.toml  run_all.py
dailydose/: __init__.py  delete.py  fetch.py  post.py  scrape.py
dailydose/shared/: auth.py  http_session.py
kleinanzeigen/: __init__.py  post.py
kleinanzeigen/shared/: auth.py
templates/: index.html
