[project]
name = "mcps"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "mcp[cli]>=1.0",
    "requests>=2.32",
    "beautifulsoup4>=4.12",
    "playwright>=1.48",
    "python-dotenv>=1.0",
    "pandas>=2.2",
    "pillow>=10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dailydose", "kleinanzeigen"]
